# chronopt

./: .gitignore  .pre-commit-config.yaml  API_PLAN.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
examples/: bicycle_model_diffsol.py  bicycle_model_evidence.py  bindings_example.py  bouncy_ball.py  bouncy_ball_sampling.py  diffsol_problem.py  model_evidence.py  model_evidence_diffsol.py  predator_prey.py  python_contour.py  python_problem.py  simple_problem.py
examples/predator_prey/: README.md  generate_data_diffrax.py  predator_prey_diffeqpy.py  predator_prey_diffrax.py  predator_prey_diffsol.py
python/: Cargo.toml  __init__.py  chronopt.pyi  pyproject.toml
python/src/: lib.rs
python/src/chronopt/: __init__.py  __init__.pyi  _chronopt.pyi  builder.pyi  cost.py  costs.pyi  sampler.py  sampler.pyi  samplers.pyi
rust/: Cargo.toml
rust/benches/: diffsol_benches.rs  optimisers_benches.rs  samplers_benches.rs
rust/src/: lib.rs
rust/src/cost/: mod.rs
rust/src/optimisers/: mod.rs
rust/src/problem/: builders.rs  mod.rs  (+1 more)
rust/tests/: diffsol_optimisation.rs
src/: lib.rs
src/optimisers/: mod.rs
src/problem/: mod.rs
tests/: test_diffsol.py  test_mathematical_suite.py  test_optimisation.py  test_ppl.py  test_python_autodiff.py
tests/examples/: test_examples.py
tests/integration/: test_diffsol_sampling.py  test_mathematical_suite.py
tests/optimisers/: test_cmaes.py
tests/unit/: test_diffsol.py  test_dynamic_nested_sampler.py  test_optimisation.py  test_python_autodiff.py  test_samplers.py  test_vector.py
(+3 files in other folders)
